Add Delete button

--- a/21v.html
+++ b/21v.html
@@ -48,6 +48,9 @@
       <span style="visibility:hidden" id='page'>45</span>
       <h2 id='folio'>21v</h2> <!-- you can style this h2 element differently, but you should keep the id="folio" and the elements value *unchanged* -->
       <div id="stats"></div>
+      <br/>
+      <button type="button" onclick='DelFunct()'>Deletions</button>
+      <br/>
       <div class="form-group">
         <select class="form-control" id="sel-hand" onChange="selectHand(event)">
           <option value="both">Both Hands</option>
