Trial links index page

--- a/index.html
+++ b/index.html
@@ -14,6 +14,14 @@
     <title>Frankenstein Edition</title>
     <link href="style.css" rel="stylesheet">
   </head>
+  <style>
+      body {
+      background-image : url('images/Shelly.jpg');
+      background-color: #e5d653;
+      background-repeat: no-repeat;
+      background-position: 100% 0%;
+      }
+    </style>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <a class="navbar-brand" href="#">Frankenstein</a>
@@ -52,12 +60,26 @@
           <p>Give here some context about the manuscript and the assignment by writing directly into the html, for example:</p>
           <ul>
             <li>A photograph of Mary Shelley and Percy Shelley;</li>
-            <li>A table/list with the pages in this digital edition;</li>
-            <li>A link to the Bodleian Library (https://www.bodleian.ox.ac.uk/home)</li>
-            <li>A link to the Shelley Godwin Archive, on which this digital edition was based (http://shelleygodwinarchive.org/)</li>
-            <li>Your name!</li>
-            <li>The licence, including link: (https://creativecommons.org/licenses/by-nc/4.0/) </li>
-            <li>A link to the encoding manual (https://bdmpmanual.uantwerpen.be/)</li>
+            <div class= "list">
+             <ul>A table/list with the pages in this digital edition;
+              <li><a href="21r.html">Page 21 recto</a></li>
+              <li><a href="21v.html">Page 21 verso</a></li>
+              <li><a href="22r.html">Page 22 recto</a></li>
+              <li><a href = "22v.html">Page 22 verso</a></li>               
+              <li><a href= "23r.htlm">Page 23 recto</a></li>
+              <li><a href="23v.html">Page 23 verso</a></li>              
+              <li><a href="24r.html">Page 24 recto</a></li>
+              <li><a href="24v.html">Page 24 verso</a></li>
+              <li><a href="25r.html">Page 25 recto</a></li>
+              <li><a href="25v.html">Page 25 verso</a></li>
+             </ul>
+              
+            </div>
+            <li>Aid from: <a href="https://www.bodleian.ox.ac.uk/home">the Bodleian Library</a></li>
+            <li>Source: <a href="http://shelleygodwinarchive.org/">the Shelley Godwin Archive</a></li>
+            <li>Author: <a href="mailto: tom.heremans@student.uantwerpen.be">Tom Heremans</a></li>
+            <li>Licence: <a href="https://creativecommons.org/licenses/by-nc/4.0/">CC BY-NC 4.0</a> </li>
+            <li>Coding manual <a href="https://bdmpmanual.uantwerpen.be/">BDMP Manual - University of Antwerp</a></li>
           </ul>
           <p><b>Style all the pages the way you want by diving into the css file.</b></p>
         </div>
