--- a/21r.html
+++ b/21r.html
@@ -41,15 +41,23 @@
             </div>
           </li>
         </ul>
+        <div class="other">
+          <div id="UA_logo">
+            <a href="https://www.uantwerpen.be"><img src="images/UA-hor-1-nl-rgb.png" size="20%"></img></a>
+          </div>
+        </div>
       </div>
     </nav>
     <div class="container-fluid">
       <h1>Frankenstein Volume I Draft in Chapter Sequence</h1>
+      <h2>
+        <a href="21v.html" class="next">&raquo;</a>
+      </h2>
       <span style="visibility:hidden" id='page'>44</span>
       <h2 id='folio'>21r</h2> <!-- you can style this h2 element differently, but you should keep the id="folio" and the elements value *unchanged* -->
       <div id="stats"></div>
       <br/>
-      <button type="button" onclick='DelFunct()'>Deletions</button>
+      <button type="button" class= 'button' onclick='DelFunct()'>Deletions</button>
       <br/>
       <div class="form-group">
         <select class="form-control" id="sel-hand" onChange="selectHand(event)">
