--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </head>
   <style>
       body {
-      background-image : url('images/Frankenstein.jpg');
+      background-image : url('images/Frankenstein3.png');
       background-color: #ff0007;
       background-repeat: no-repeat;
       background-position: 100% 0%;
