Minor change index

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
               <li><a href="21v.html">Page 21 verso</a></li>
               <li><a href="22r.html">Page 22 recto</a></li>
               <li><a href = "22v.html">Page 22 verso</a></li>               
-              <li><a href= "23r.htlm">Page 23 recto</a></li>
+              <li><a href= "23r.html">Page 23 recto</a></li>
               <li><a href="23v.html">Page 23 verso</a></li>              
               <li><a href="24r.html">Page 24 recto</a></li>
               <li><a href="24v.html">Page 24 verso</a></li>
