Restructuring the data

--- a/html/index.html
+++ b/html/index.html
@@ -12,11 +12,11 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500">
 
     <title>Frankenstein Edition</title>
-    <link href="style_index.css" rel="stylesheet">
+    <link href="../css/style_index.css" rel="stylesheet">
   </head>
   <style>
       body {
-      background-image : url('images/Frankenstein3.png');
+      background-image : url('../images/Frankenstein3.png');
       background-color: #ff0007;
       background-repeat: no-repeat;
       background-position: 100% 0%;
@@ -51,7 +51,7 @@
         </ul>
         <div class="other">
         <div id="UA_logo">
-          <a href="https://www.uantwerpen.be"><img src="images/UA-hor-1-nl-rgb.png" size="20%"></img></a>
+          <a href="https://www.uantwerpen.be"><img src="../images/UA-hor-1-nl-rgb.png" size="20%"></img></a>
         </div>
         </div>
       </div>
@@ -59,11 +59,11 @@
     <div class="container">
     <div>
       <div id="image_left">
-        <img src="images/Mary_Wollstonecraft_Shelley.jpg" alt="Mary Wollstonecraft Shelley" border="white"></img>
+        <img src="../images/Mary_Wollstonecraft_Shelley.jpg" alt="Mary Wollstonecraft Shelley" border="white"></img>
         <figcaption class="caption">Mary Wollstonecraft Shelley</figcaption>
       </div>
       <div id="image_right">
-        <img src="images/Percy_Shelley.jpg" alt="Percy Shelley" border="white"></img>
+        <img src="../images/Percy_Shelley.jpg" alt="Percy Shelley" border="white"></img>
         <figcaption class="caption">Percy Bysshe Shelley</figcaption>
       </div>
     </div>
