--- a/index.html
+++ b/index.html
@@ -36,16 +36,16 @@
               Pages
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-              <a class="dropdown-item" href="21r.html">21r</a>
-              <a class="dropdown-item" href="21v.html">21v</a>
-              <a class="dropdown-item" href="22r.html">22r</a>
-              <a class="dropdown-item" href="22v.html">22v</a>
-              <a class="dropdown-item" href="23r.html">23r</a>
-              <a class="dropdown-item" href="23v.html">23v</a>
-              <a class="dropdown-item" href="24r.html">24r</a>
-              <a class="dropdown-item" href="24v.html">24v</a>
-              <a class="dropdown-item" href="25r.html">25r</a>
-              <a class="dropdown-item" href="25v.html">25v</a>
+              <a class="dropdown-item" href="../html/21r.html">21r</a>
+              <a class="dropdown-item" href="../html/21v.html">21v</a>
+              <a class="dropdown-item" href="../html/22r.html">22r</a>
+              <a class="dropdown-item" href="../html/22v.html">22v</a>
+              <a class="dropdown-item" href="../html/23r.html">23r</a>
+              <a class="dropdown-item" href="../html/23v.html">23v</a>
+              <a class="dropdown-item" href="../html/24r.html">24r</a>
+              <a class="dropdown-item" href="../html/24v.html">24v</a>
+              <a class="dropdown-item" href="../html/25r.html">25r</a>
+              <a class="dropdown-item" href="../html/25v.html">25v</a>
             </div>
           </li>
         </ul>
@@ -84,16 +84,16 @@
             <h4>Manuscript pages of <i>Frankenstein</i></h4>
             <div class= "list">
              <ul>
-              <li><a href="21r.html">Page 21 recto</a></li>
-              <li><a href="21v.html">Page 21 verso</a></li>
-              <li><a href="22r.html">Page 22 recto</a></li>
-              <li><a href = "22v.html">Page 22 verso</a></li>               
-              <li><a href= "23r.html">Page 23 recto</a></li>
-              <li><a href="23v.html">Page 23 verso</a></li>              
-              <li><a href="24r.html">Page 24 recto</a></li>
-              <li><a href="24v.html">Page 24 verso</a></li>
-              <li><a href="25r.html">Page 25 recto</a></li>
-              <li><a href="25v.html">Page 25 verso</a></li>
+              <li><a href="../html/21r.html">Page 21 recto</a></li>
+              <li><a href="../html/21v.html">Page 21 verso</a></li>
+              <li><a href="../html/22r.html">Page 22 recto</a></li>
+              <li><a href = "../html/22v.html">Page 22 verso</a></li>               
+              <li><a href= "../html/23r.html">Page 23 recto</a></li>
+              <li><a href="../html/23v.html">Page 23 verso</a></li>              
+              <li><a href="../html/24r.html">Page 24 recto</a></li>
+              <li><a href="../html/24v.html">Page 24 verso</a></li>
+              <li><a href="../html/25r.html">Page 25 recto</a></li>
+              <li><a href="../html/25v.html">Page 25 verso</a></li>
              </ul>
               
             </div>
