--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500">
 
     <title>Frankenstein Edition</title>
-    <link href="../css/style_index.css" rel="stylesheet">
+    <link href="style_index.css" rel="stylesheet">
   </head>
   <style>
       body {
-      background-image : url('../images/Frankenstein3.png');
+      background-image : url('images/Frankenstein3.png');
       background-color: #ff0007;
       background-repeat: no-repeat;
       background-position: 100% 0%;
@@ -36,22 +36,22 @@
               Pages
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-              <a class="dropdown-item" href="../html/21r.html">21r</a>
-              <a class="dropdown-item" href="../html/21v.html">21v</a>
-              <a class="dropdown-item" href="../html/22r.html">22r</a>
-              <a class="dropdown-item" href="../html/22v.html">22v</a>
-              <a class="dropdown-item" href="../html/23r.html">23r</a>
-              <a class="dropdown-item" href="../html/23v.html">23v</a>
-              <a class="dropdown-item" href="../html/24r.html">24r</a>
-              <a class="dropdown-item" href="../html/24v.html">24v</a>
-              <a class="dropdown-item" href="../html/25r.html">25r</a>
-              <a class="dropdown-item" href="../html/25v.html">25v</a>
+              <a class="dropdown-item" href="21r.html">21r</a>
+              <a class="dropdown-item" href="21v.html">21v</a>
+              <a class="dropdown-item" href="22r.html">22r</a>
+              <a class="dropdown-item" href="22v.html">22v</a>
+              <a class="dropdown-item" href="23r.html">23r</a>
+              <a class="dropdown-item" href="23v.html">23v</a>
+              <a class="dropdown-item" href="24r.html">24r</a>
+              <a class="dropdown-item" href="24v.html">24v</a>
+              <a class="dropdown-item" href="25r.html">25r</a>
+              <a class="dropdown-item" href="25v.html">25v</a>
             </div>
           </li>
         </ul>
         <div class="other">
         <div id="UA_logo">
-          <a href="https://www.uantwerpen.be"><img src="../images/UA-hor-1-nl-rgb.png" size="20%"></img></a>
+          <a href="https://www.uantwerpen.be"><img src="images/UA-hor-1-nl-rgb.png" size="20%"></img></a>
         </div>
         </div>
       </div>
@@ -59,11 +59,11 @@
     <div class="container">
     <div>
       <div id="image_left">
-        <img src="../images/Mary_Wollstonecraft_Shelley.jpg" alt="Mary Wollstonecraft Shelley" border="white"></img>
+        <img src="images/Mary_Wollstonecraft_Shelley.jpg" alt="Mary Wollstonecraft Shelley" border="white"></img>
         <figcaption class="caption">Mary Wollstonecraft Shelley</figcaption>
       </div>
       <div id="image_right">
-        <img src="../images/Percy_Shelley.jpg" alt="Percy Shelley" border="white"></img>
+        <img src="images/Percy_Shelley.jpg" alt="Percy Shelley" border="white"></img>
         <figcaption class="caption">Percy Bysshe Shelley</figcaption>
       </div>
     </div>
@@ -84,16 +84,16 @@
             <h4>Manuscript pages of <i>Frankenstein</i></h4>
             <div class= "list">
              <ul>
-              <li><a href="../html/21r.html">Page 21 recto</a></li>
-              <li><a href="../html/21v.html">Page 21 verso</a></li>
-              <li><a href="../html/22r.html">Page 22 recto</a></li>
-              <li><a href = "../html/22v.html">Page 22 verso</a></li>               
-              <li><a href= "../html/23r.html">Page 23 recto</a></li>
-              <li><a href="../html/23v.html">Page 23 verso</a></li>              
-              <li><a href="../html/24r.html">Page 24 recto</a></li>
-              <li><a href="../html/24v.html">Page 24 verso</a></li>
-              <li><a href="../html/25r.html">Page 25 recto</a></li>
-              <li><a href="../html/25v.html">Page 25 verso</a></li>
+              <li><a href="21r.html">Page 21 recto</a></li>
+              <li><a href="21v.html">Page 21 verso</a></li>
+              <li><a href="22r.html">Page 22 recto</a></li>
+              <li><a href = "22v.html">Page 22 verso</a></li>               
+              <li><a href= "23r.html">Page 23 recto</a></li>
+              <li><a href="23v.html">Page 23 verso</a></li>              
+              <li><a href="24r.html">Page 24 recto</a></li>
+              <li><a href="24v.html">Page 24 verso</a></li>
+              <li><a href="25r.html">Page 25 recto</a></li>
+              <li><a href="25v.html">Page 25 verso</a></li>
              </ul>
               
             </div>
